--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="index.html">About<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-item nav-link" href="index.html">About</a>
+            <a class="nav-item nav-link active" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
         </div>
@@ -49,19 +49,39 @@
             <div class="col-md-12">
 
               <div class="card">
-                  <h4 class="card-header">About Me</h4>
+                  <h4 class="card-header">Portfolio</h4>
                     <div class="card-body">
 
                       <div class="row">
-
-                        <div class="col-md-4">
-                          <img class="img-thumbnail" src="assets/images/me.jpg" alt="Ashley Spellman">
+                        <div class="col-md-6">
+                          <a href="#"><img class="img-fluid portfolio-pic" src="assets/images/portfolio1.jpg"><p>Hangman</p>
+                          </a>
                         </div>
 
-                        <div class="col-md-8">
-                          <p>I am a Retail Planner by day, aspiring web developer by night. I have an ecclectic educational background including a Bachelors in History, a Juris Doctor, and an Associates in Merchandise Marketing. All of this amalgamates to lend me sharp analytical skills with a creatice flair, which you can see in my work. I am also a staunch animal lover (with a particular fondness for cats) and decent vegan cook.</p>
+                        <div class="col-md-6">
+                          <a href="#"><img class="img-fluid" src="assets/images/portfolio2.jpg"><p>RPG Game</p>
+                          </a>
                         </div>
                       </div>  
+
+                      <div class="row">
+                        <div class="col-md-6">
+                          <a href="#"><img class="img-fluid portfolio-pic" src="assets/images/portfolio3.jpg"><p>Trivia Game</p>
+                          </a>
+                        </div>
+
+                        <div class="col-md-6">
+                          <a href="#"><img class="img-fluid" src="assets/images/portfolio4.jpg"><p>Rutgers Info Widget</p>
+                          </a>
+                        </div>
+                      </div> 
+
+                      <div class="row">
+                        <div class="col-md-6">
+                          <a href="#"><img class="img-fluid portfolio-pic" src="assets/images/portfolio6.jpg"><p>Rock Paper Scissors</p>
+                          </a>
+                        </div>
+                      </div> 
                     </div>
                   </div>
                 </div>
