--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </div>
 
                         <div class="col-md-8">
-                          <p>I am a Retail Planner by day, aspiring web developer by night. I have an ecclectic educational background including a Bachelors in History, a Juris Doctor, and an Associates in Merchandise Marketing. All of this amalgamates to lend me sharp analytical skills with a creatice flair, which you can see in my work. I am also a staunch animal lover (with a particular fondness for cats) and decent vegan cook.</p>
+                          <p class="bio">I am a Retail Planner by day, aspiring web developer by night. I have an ecclectic educational background including a Bachelors in History, a Juris Doctor, and an Associates in Merchandise Marketing. All of this amalgamates to lend me sharp analytical skills with a creatice flair, which you can see in my work. I am also a staunch animal lover (with a particular fondness for cats) and decent vegan cook.</p>
                         </div>
                       </div>  
                     </div>
