--- a/portfolio.html
+++ b/portfolio.html
@@ -54,31 +54,31 @@
 
                       <div class="row">
                         <div class="col-md-6">
-                          <a href="#"><img class="img-fluid portfolio-pic" src="assets/images/portfolio1.jpg"><p>Hangman</p>
+                          <a href="#"><img class="img-fluid portfolio-pic" src="assets/images/portfolio1.jpg"><p class="portfolio-label">Hangman</p>
                           </a>
                         </div>
 
                         <div class="col-md-6">
-                          <a href="#"><img class="img-fluid" src="assets/images/portfolio2.jpg"><p>RPG Game</p>
+                          <a href="#"><img class="img-fluid" src="assets/images/portfolio2.jpg"><p class="portfolio-label">RPG Game</p>
                           </a>
                         </div>
                       </div>  
 
                       <div class="row">
                         <div class="col-md-6">
-                          <a href="#"><img class="img-fluid portfolio-pic" src="assets/images/portfolio3.jpg"><p>Trivia Game</p>
+                          <a href="#"><img class="img-fluid portfolio-pic" src="assets/images/portfolio3.jpg"><p class="portfolio-label">Trivia Game</p>
                           </a>
                         </div>
 
                         <div class="col-md-6">
-                          <a href="#"><img class="img-fluid" src="assets/images/portfolio4.jpg"><p>Rutgers Info Widget</p>
+                          <a href="#"><img class="img-fluid" src="assets/images/portfolio4.jpg"><p class="portfolio-label">Rutgers Info Widget</p>
                           </a>
                         </div>
                       </div> 
 
                       <div class="row">
                         <div class="col-md-6">
-                          <a href="#"><img class="img-fluid portfolio-pic" src="assets/images/portfolio6.jpg"><p>Rock Paper Scissors</p>
+                          <a href="#"><img class="img-fluid portfolio-pic" src="assets/images/portfolio6.jpg"><p class="portfolio-label">Rock Paper Scissors</p>
                           </a>
                         </div>
                       </div> 
