--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <div class="row">
 
                 <div class="col-md-4">
-                  <a href="https://github.com/akspellm" target="blank"><img class="img-fluid center-block" src="assets/images/github.png"></a>
+                  <a href="https://github.com/akspellm" target="blank"><img class="img-fluid" src="assets/images/github.png"></a>
                 </div>
 
                 <div class="col-md-4">
